 - GBA Savedata: Fix extracting save when not yet configured in-game
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix file handle leak on opening an invalid ROM
 - Qt: Fix a race condition in the frame inspector
 - Qt: Fix Italian RTC translation (fixes mgba.io/i/1798)
 - Util: Fix crash if PNG header fails to write
Misc:
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - FFmpeg: Use range coder for FFV1 to reduce output size
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Add per-page scrolling to memory view (fixes mgba.io/i/1795)
 - Qt: Add setting to display ROM filename in title (closes mgba.io/i/1784)

0.8.2: (2020-06-14)
Emulation fixes:
 - ARM: Fix timing on Thumb shift instructions
 - GB: Fix GBC game registers after skipping BIOS
 - GB MBC: Support 4MB MBC30 ROMs (fixes mgba.io/i/1713)
 - GB Video: Fix BGPS value after skipping BIOS (fixes mgba.io/i/1717)
 - GBA: Add missing RTC overrides for Legendz games
 - GBA BIOS: Reset renderer when RegisterRamReset called (fixes mgba.io/i/1756)
 - GBA SIO: Fix Multiplayer busy bit
 - GBA SIO: Fix double-unloading active driver
 - GBA Timers: Fix deserializing count-up timers
 - GBA Video: Fix mosaic objects drawing past the end (fixes mgba.io/i/1702)
 - GBA Video: Fix disabling OBJWIN in GL renderer (fixes mgba.io/i/1759)
 - GBA Video: Add missing parts of 256-color mode 0 mosaic (fixes mgba.io/i/1701)
 - GBA Video: Fix double-size OBJ wrapping in GL renderer (fixes mgba.io/i/1712)
 - GBA Video: Simplify sprite cycle counting (fixes mgba.io/i/1279)
 - GBA Video: Fix sprite/backdrop blending regression
Other fixes:
 - 3DS: Fix framelimiter on newer citro3d (fixes mgba.io/i/1771)
 - ARM: Fix disassembling of several S-type instructions (fixes mgba.io/i/1778)